# win-ananicy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rules.json
gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RuleModel.cs  WinAnanicyGui.csproj
src/: config.cpp  config.hpp  logger.cpp  logger.hpp  main.cpp  process_utils.cpp  process_utils.hpp
